--- a/assets/style.css
+++ b/assets/style.css
@@ -1,62 +1,56 @@
-/* Réinitialisation de la marge et du padding */
-* {
-	margin: 0;
-	padding: 0;
-  }
-  
-  /* Styles pour le corps de la page */
-  body {
+body {
 	max-width: 1920px;
 	margin: auto;
+}
+* {
 	font-family: 'Inter';
 	font-style: normal;
-  }
-  
-  /* Styles pour la barre de navigation */
-  .top-header {
+}
+.top-header {
 	background-color: white;
 	position: sticky;
-	top: 0;
+	top:0;
 	z-index: 1000;
 	display: flex;
 	justify-content: space-between;
-	padding: 30px 100px;
+	padding-inline: 100px;
+	padding-block: 30px;
 	align-items: center;
-  }
-  
-  .top-header .name {
+}
+
+.top-header .name {
 	font-size: 26px;
-  }
-  
-  .nav ul {
+}
+
+.nav ul {
 	display: flex;
 	list-style-type: none;
 	font-size: 14px;
 	margin-bottom: 0;
-  }
-  
-  .nav li {
-	padding: 0 10px;
-  }
-  
-  .nav a {
+}
+
+.nav li {
+	padding-inline: 10px;
+}
+
+.nav a {
 	text-decoration: none;
-	color: #000;
-  }
-  
-  .social-link img {
+	color: #000
+}
+
+.social-link img {
 	width: 20px;
-  }
-  
-  /* Styles pour la section "À propos" */
-  #about {
+}
+
+#about {
 	display: flex;
 	background-color: #F6D2B8;
-	padding: 100px 100px 100px 0;
+	padding-inline: 100px;
+	padding-block: 100px;
 	position: relative;
-  }
-  
-  .picture.left::before {
+}
+
+.picture.left::before {
 	content: ' ';
 	background-color: #E5975F;
 	width: 374px;
@@ -65,122 +59,108 @@
 	bottom: 0;
 	left: 0;
 	z-index: -1;
-  }
-  
-  .picture {
+}
+
+.picture {
 	flex: 1;
 	margin: 0 20px;
 	z-index: 0;
-  }
-  
-  .picture img {
+}
+
+.picture img {
 	width: 100%;
-  }
-  
-  #about-me {
-	flex: 2;
-  }
-  
-  .about-me__title {
+
+}
+#about-me {
+	flex: 2
+}
+.about-me__title {
 	margin-top: 1em;
 	margin-bottom: 60px;
 	font-size: 30px;
-  }
-  
-  .about-me__introduction {
+}
+.about-me__introduction {
+	font-family: 'Spectral';
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
-  }
-  
-  #about-me p {
+}
+#about-me p {
 	width: 80%;
 	font-size: 14px;
-  }
-  
-  /* Styles pour la section "Portfolio" */
-  #gallery {
-	/* min-height: 100vh; */
-  }
-  
-  .title {
+}
+
+#gallery {
+	/*	min-height: 100vh; */
+}
+.title{
 	text-align: center;
 	padding-block: 2em;
-  }
-  
-  .gallery .nav {
+}
+.gallery .nav {
 	justify-content: center;
-  }
-  
-  .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+}
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
 	background-color: #BEB45A;
-	border-radius: 0;
-  }
-  
-  .nav-pills .nav-link {
-	color: #000;
-  }
-  
-  .item-column {
+	border-radius:0 ;
+}
+.nav-pills .nav-link {
+	color: #000
+}
+.item-column {
 	position: relative;
 	margin-bottom: 0 !important;
 	padding: 0;
-  }
-  
-  .item-column::after {
+}
+.item-column::after{
 	content: "";
 	display: block;
 	padding-bottom: 100%;
-  }
-  
-  .gallery-item {
+
+}
+.gallery-item {
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 	padding: .5em;
-  }
-  
-  .mg-prev, .mg-next {
+}
+.mg-prev, .mg-next {
 	width: 30px;
 	height: 30px;
-	border-radius: 0;
+	border-radius: 00%;
 	justify-content: center;
 	align-items: center;
 	display: flex;
 	font-size: 24px;
-  }
-  
-  /* Styles pour les citations */
-  .quote {
+}
+
+.quote {
 	font-family: 'Spectral';
 	font-style: italic;
 	width: 70%;
 	margin: auto;
 	padding-block: 3em;
-  }
-  
-  .quote__text {
+}
+.quote__text {
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
-  }
-  
-  .quote__author {
+
+}
+.quote__author {
 	font-family: Spectral;
 	font-weight: 800;
 	font-size: 22px;
-  }
-  
-  /* Styles pour la section "Mes services" */
-  #services {
+}
+
+#services {
 	margin: auto;
-	background-color: #A8D5D8;
+	background-color: #A8D5D8 ;
 	position: relative;
-  }
-  
-  #services .container::before {
+}
+#services .container::before{
 	content: ' ';
 	background-color: #1C6474;
 	position: absolute;
@@ -189,15 +169,16 @@
 	bottom: 0;
 	left: 0;
 	z-index: 0;
-  }
-  
-  #services .container {
+}
+
+#services .container {
 	justify-content: space-between;
 	display: flex;
-	padding: 2em 0;
-  }
-  
-  .service {
+	padding : 2em 0;
+
+}
+
+.service {
 	background-color: white;
 	max-width: 390px;
 	width: 30%;
@@ -207,9 +188,9 @@
 	flex-direction: column;
 	justify-content: space-between;
 	z-index: 1;
-  }
+}
 
-  #contact {
+#contact {
 	margin: auto;
 	background-color: #D8D3A8 ;
 	position: relative;
@@ -260,139 +241,116 @@ form textarea {
 }
 input[type="submit"] {
 	background-color: #BEB45A;
-	padding: .5em 1em;
+	padding: .5em 1em
 }
-  
-  /* Styles pour les écrans de petite taille */
 
-  @media all and (max-width: 1180px) {
+@media all and (max-width: 1180px) {
 	.picture {
-	  flex: 2;
+		flex : 2;
 	}
-  
 	#about, #contact .container {
-	  align-items: center;
+		align-items: center;
 	}
-  
 	.about-me__title {
-	  margin-top: 0;
-	  margin-bottom: 1em;
+		margin-top: 0;
+		margin-bottom: 1em;
 	}
-  
 	#about-me h6, #about-me p {
-	  width: 100%;
+		width: 100%;
 	}
-  }
-  
-  @media all and (max-width: 1000px) {
-	#about {
-	  flex-direction: column;
+}
+
+@media all and (max-width: 1000px) {
+	#about{
+		flex-direction: column;
+
 	}
-  
 	.picture {
-	  width: 50%;
+		width: 50%;
 	}
-  
 	.picture.left::before {
-	  width: 100%;
-	  height: 30%;
-	  position: absolute;
-	  bottom: auto;
-	  top: 0;
-	  left: 0;
-	  z-index: -1;
+		width: 100%;
+		height: 30%;
+		position: absolute;
+		bottom: auto;
+		top: 0;
+		left: 0;
+		z-index: -1;
 	}
-  
-	.about-me__title {
-	  text-align: center;
-	  margin-top: 1em;
+	.about-me__title{
+		text-align: center;
+		margin-top: 1em;
 	}
-  
 	#services .container {
-	  flex-direction: column;
+		flex-direction: column;
 	}
-  
 	.service {
-	  width: 100%;
-	  max-width: 100%;
-	  height: auto;
-	  margin: 2em 0;
+		width: 100%;
+		max-width: 100%;
+		height: auto;
+		margin: 2em 0
 	}
-  
-	.service__description {
-	  margin-bottom: 1em;
+	.service__description{
+		margin-bottom: 1em;
 	}
-  
-	#services .container::before {
-	  width: 30%;
-	  height: 100%;
-	  bottom: 0;
-	  right: 0;
-	  left: auto;
-	  z-index: 0;
+
+	#services .container::before{
+		width: 30%;
+		height: 100%;
+		bottom: 0;
+		right: 0;
+		left: auto;
+		z-index: 0;
 	}
-  
+
 	#contact .container {
-	  flex-direction: column;
+		flex-direction: column;
 	}
-  
 	#contact .picture.right {
-	  margin-top: 1em;
+		margin-top: 1em;
 	}
-  
 	.picture.right::before {
-	  width: 100%;
-	  height: 30%;
-	  position: absolute;
-	  bottom: 0;
-	  right: 0;
-	  z-index: -1;
+		width: 100%;
+		height: 30%;
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		z-index: -1;
 	}
-  }
-  
-  @media all and (max-width: 650px) {
+}
+
+@media all and (max-width: 650px) {
 	.top-header {
-	  flex-direction: column;
-	  padding-inline: 0;
+		flex-direction: column;
+		padding-inline: 0;
 	}
-  
-	.top-header .nav,
-	.top-header .nav ul {
-	  width: 100%;
-	  padding: 0 0 0 0;
+	.top-header .nav, .top-header .nav ul {
+		width: 100%;
+		padding: 0 0 0 0;
 	}
-  
 	.top-header .nav li {
-	  flex: 1;
-	  padding-block: 1em;
-	  text-align: center;
+		flex: 1;
+		padding-block: 1em;
+		text-align: center;
 	}
-  
-	.picture.left::before,
-	.picture.right::before {
-	  height: 150px;
+	.picture.left::before, .picture.right::before {
+		height: 150px;
 	}
-  
 	#services .container {
-	  align-items: center;
+		align-items: center;
 	}
-  
 	.service {
-	  max-width: 90%;
+		max-width: 90%;
 	}
-  
-	#about,
-	#contact {
-	  padding-inline: 2em;
-	  padding-block: 2em;
+	#about, #contact {
+		padding-inline: 2em;
+		padding-block: 2em;
 	}
-  
 	form {
-	  width: 100%;
+		width: 100%;
 	}
-  
 	.picture {
-	  width: 80%;
+		width: 80%;
 	}
-  }
-  
+}
+
